# synthesizer

./: .gitignore  CMakeLists.txt  build-windows.sh  main.c
